Pantalla de admin casi lista - me faltan agregarle los modals

--- a/system_huellitas/views/admin/index_admin.html
+++ b/system_huellitas/views/admin/index_admin.html
@@ -23,30 +23,32 @@
                 <img src="../../resources/img/png/huellitas_logo.png" width="600px">
             </div>
             <div class="col-4">
-                <div class="form" id="login">
-                    <div class="row">
-                        <div class="col-auto ">
-                            <i class="bi bi-eye-fill" style="font-size: 2rem; color: black;"></i>
+                <form action="">
+                    <div class="form" id="login">
+                        <div class="row">
+                            <div class="col-auto ">
+                                <i class="bi bi-eye-fill" style="font-size: 2rem; color: black;"></i>
+                            </div>
+                            <div class="col">
+                                <div class="mb-4">
+                                    <label for="name" class="form-label">Alias</label>
+                                    <input type="text" class="form-control bg-skin-color p-2" id="name">
+                                </div>
+                            </div>
                         </div>
-                        <div class="col">
-                            <div class="mb-4">
-                                <label for="name" class="form-label">Alias</label>
-                                <input type="text" class="form-control bg-skin-color p-2" id="name">
+                        <div class="row">
+                            <div class="col-auto">
+                                <i class="bi bi-lock-fill" style="font-size: 2rem; color: black;"></i>
+                            </div>
+                            <div class="col">
+                                <div class="mb-4">
+                                    <label for="password" class="form-label">Contraseña</label>
+                                    <input type="password" class="form-control bg-skin-color p-2" id="password">
+                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-auto">
-                            <i class="bi bi-lock-fill" style="font-size: 2rem; color: black;"></i>
-                        </div>
-                        <div class="col">
-                            <div class="mb-4">
-                                <label for="password" class="form-label">Contraseña</label>
-                                <input type="password" class="form-control bg-skin-color p-2" id="password">
-                             </div>
-                        </div>
-                    </div>
-                </div>
+                </form>
                 <div class="container text-center mt-4">
                     <!--<button type="button" class="btn btn-orange-color text-light p-2" href="dashboard.html">Ingresar</button>
                     -->
