--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -149,9 +149,9 @@
                             </button>
                     
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item" href="#">Completado</a>
-                                <a class="dropdown-item" href="#">Pendiente</a>
-                                <a class="dropdown-item" href="#">Cancelado</a>
+                                <a class="dropdown-item" href="#" id="completadooption"> Completado</a>
+                                <a class="dropdown-item" href="#" id="pendienteoption"> Pendiente</a>
+                                <a class="dropdown-item" href="#" id="canceladooption"> Cancelado</a>
                             </div>
                         </div>
                     </div>                    
@@ -165,6 +165,7 @@
         </form>
     </div>
 </div>
+
 
 
 
