Pantalla de admins completa con responsive

--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -31,8 +31,8 @@
                         </div>
                         <div class="row">
                             <div class="col-4">
-                                <form class="d-flex" role="search" id="search">
-                                    <input class="form-control me-2" type="search" aria-label="Search" id="search">
+                                <form class="d-flex" role="search" id="searchDashboard">
+                                    <input class="form-control me-2 bg-white" type="search" aria-label="Search" id="search">
                                     <button class="btn btn-orange-color text-light" type="submit">Buscar</button>
                                 </form>
                             </div>
