--- a/system_huellitas/resources/scss/main.scss
+++ b/system_huellitas/resources/scss/main.scss
@@ -1,6 +1,12 @@
+// Importacion de todos los componentes de boostrap para poder cambiarlos
 @import "../../node_modules/bootstrap/scss/functions";
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/variables-dark";
+// Importacion de la fuente que se esta utilizando
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+// Cambio de letra
+$font-family-sans-serif:  "Inter", sans-serif;
 
 // PALETA DE COLORES
 // Declaración de variables para asignación de colores
@@ -34,4 +40,18 @@ $theme-colors: map-merge($theme-colors, $red-color);
 $theme-colors: map-merge($theme-colors, $yellow-color);
 $theme-colors: map-merge($theme-colors, $gray-color);
 
-@import "../../node_modules/bootstrap/scss/bootstrap.scss"
+
+//Cambio en el estilo de los input
+$input-bg: #F6F3F3;
+$input-border-color: #F6F3F3;
+$input-focus-bg: $input-bg;
+$input-focus-border-color: #afacac;
+$input-focus-box-shadow: 0 0 0 0.25rem rgba(127, 127, 129, 0.25);
+
+// Cambio en el estilo de los input disabled
+$input-disabled-bg: $input-bg;
+
+$form-switch-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");;
+$form-switch-focus-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
