--- a/system_huellitas/views/admin/scrud_admin.html
+++ b/system_huellitas/views/admin/scrud_admin.html
@@ -13,6 +13,8 @@
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/table_styles.css">
     <!-- Agregamos el archivo css del menu -->
     <link type="text/css" rel="stylesheet" href="../../resources/css/admin/static_components/menu.css">
+    <!-- Agregamos el archivo css para estilizar los switch-->
+    <link type="text/css" rel="stylesheet" href="../../resources/css/admin/switch_styles.css">
 </head>
 
 <body>
@@ -37,8 +39,8 @@
             <div class="row align-items-center gy-4">
                 <div class="col-md-6 col-lg-6">
                     <form class="d-flex" role="search" id="search_productos_perros">
-                        <input class="form-control rounded-4 shadow" type="search" aria-label="Search" id="search"
-                            placeholder="Buscar...">
+                        <input class="form-control rounded-4 shadow bg-white" type="search" aria-label="Search"
+                            id="search" placeholder="Buscar...">
                     </form>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-6">
@@ -81,14 +83,14 @@
                         <td>Vendedor</td>
                         <td>
                             <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
+                                data-bs-target="#editar_permiso_admin"><img src="../../resources/img/svg/info_icon.svg"
                                     width="33px"></button>
                         </td>
                         <td>
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
                             <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/edit_icon.svg"
+                                data-bs-target="#editar_admin"><img src="../../resources/img/svg/edit_icon.svg"
                                     width="35px"></button>
                         </td>
                     </tr>
@@ -102,13 +104,13 @@
                         <td>Contador</td>
                         <td>
                             <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/info_icon.svg"
+                                data-bs-target="#editar_permiso_admin"><img src="../../resources/img/svg/info_icon.svg"
                                     width="33px"></button>
                         <td>
                             <button type="button" class="btn btn-light"><img
                                     src="../../resources/img/svg/delete_icon.svg" width="35px"></button>
                             <button type="button" class="btn btn-light" data-bs-toggle="modal"
-                                data-bs-target="#actCupon"><img src="../../resources/img/svg/edit_icon.svg"
+                                data-bs-target="#editar_admin"><img src="../../resources/img/svg/edit_icon.svg"
                                     width="35px"></button>
                         </td>
                     </tr>
@@ -129,69 +131,187 @@
 <!-- Modals -->
 <!-- Agregar admin -->
 <div class="modal fade" id="agregar_admin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable">
+    <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable modal-fullscreen-sm-down">
         <div class="modal-content">
             <div class="modal-header bg-orange-color">
                 <div class="container text-center text-light">
-                    <h1 class="modal-title fs-5 text-center" id="exampleModalLabel">Crear administrador</h1>
+                    <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Crear administrador</h1>
                 </div>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
                     aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <!-- Fila 1 -->
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-auto">
-                            <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
-                        </div>
-                        <div class="col d-flex">
-                            <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen">Cargar
-                                imagen</button>
+                <form action="" id="crear_admin">
+                    <!-- Fila 1 -->
+                    <div class="container text-center text-md-start text-lg-start">
+                        <div class="row align-items-center gy-3">
+                            <div class="col-sm-12 col-md-auto">
+                                <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen">Cargar
+                                    imagen</button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!-- Fila 2 -->
-                <div class="container mt-4">
-                    <form action="">
+                    <!-- Fila 2 -->
+                    <div class="container mt-4">
                         <div class="row">
-                            <div class="col-6">
+                            <div class="col-sm-12 col-md-6 col-lg-6">
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label">Nombre</label>
-                                    <input type="name" class="form-control" id="nombre_admin"
-                                        placeholder="Susan Abigail" name="nombre_admin">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Nombre</label>
+                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label">Apellidos</label>
-                                    <input type="name" class="form-control" id="nombre_admin"
-                                        placeholder="Susan Abigail" name="nombre_admin">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Apellidos</label>
+                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label">Contraseña</label>
-                                    <input type="name" class="form-control" id="nombre_admin"
-                                        placeholder="Susan Abigail" name="nombre_admin">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Contraseña</label>
+                                    <input type="password" class="form-control" id="nombre_admin" name="nombre_admin">
                                 </div>
                             </div>
-                            <div class="col-6">
+                            <div class="col-sm-12 col-md-6 col-lg-6">
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label">Fecha de ingreso</label>
-                                    <input type="name" class="form-control" id="nombre_admin"
-                                        placeholder="Susan Abigail" name="nombre_admin">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Correo electrónico</label>
+                                    <input type="email" class="form-control" id="nombre_admin"
+                                        placeholder="admin@gmail.com" name="nombre_admin">
                                 </div>
                                 <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label">Correo electrónico</label>
-                                    <input type="name" class="form-control" id="nombre_admin"
-                                        placeholder="Susan Abigail" name="nombre_admin">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="nombre_admin" class="form-label">Alías</label>
-                                    <input type="name" class="form-control" id="nombre_admin"
-                                        placeholder="Susan Abigail" name="nombre_admin">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Alías</label>
+                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
                                 </div>
                             </div>
 
                         </div>
+                    </div>
+            </div>
+            <div class="container text-center mb-4 mt-4">
+                <button type="button" class="btn btn-orange-color text-light me-3"
+                    data-bs-dismiss="modal">Guardar</button>
+                <button type="button" class="btn btn-red-color text-light">Cancelar</button>
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
+
+<!-- Editar admin -->
+<div class="modal fade" id="editar_admin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg modal-dialog-scrollable modal-fullscreen-sm-down">
+        <div class="modal-content">
+            <div class="modal-header bg-orange-color">
+                <div class="container text-center text-light">
+                    <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Editar administrador</h1>
                 </div>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="" id="editar_admin">
+                    <!-- Fila 1 -->
+                    <div class="container text-center text-md-start text-lg-start">
+                        <div class="row align-items-center gy-3">
+                            <div class="col-sm-12 col-md-auto">
+                                <img class="rounded-1" src="../../resources/img/png/rectangulo.png" width="120px">
+                            </div>
+                            <div class="col">
+                                <button type="button" class="btn btn-red-color text-light" id="btn_cargarImagen">Cargar
+                                    imagen</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Fila 2 -->
+                    <div class="container mt-4">
+                        <div class="row">
+                            <div class="col-sm-12 col-md-6 col-lg-6">
+                                <div class="mb-3">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Nombre</label>
+                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Apellidos</label>
+                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Contraseña</label>
+                                    <input type="password" class="form-control" id="nombre_admin" name="nombre_admin">
+                                </div>
+                            </div>
+                            <div class="col-sm-12 col-md-6 col-lg-6">
+                                <div class="mb-3">
+                                    <label for="fecha_admin" class="form-label fw-semibold">Fecha de registro</label>
+                                    <input type="text" class="form-control" aria-label="Disabled input example" disabled
+                                        name="fechaAdmin" id="fecha_admin">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Correo electrónico</label>
+                                    <input type="email" class="form-control" id="nombre_admin" name="nombre_admin">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="nombre_admin" class="form-label fw-semibold">Alías</label>
+                                    <input type="text" class="form-control" id="nombre_admin" name="nombre_admin">
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+            </div>
+            <div class="container text-center mb-4 mt-4">
+                <button type="button" class="btn btn-orange-color text-light me-3"
+                    data-bs-dismiss="modal">Guardar</button>
+                <button type="button" class="btn btn-red-color text-light">Cancelar</button>
+            </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+
+
+
+
+<!-- Editar permisos admin -->
+<div class="modal fade" id="editar_permiso_admin" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-md modal-dialog-scrollable">
+        <div class="modal-content">
+            <div class="modal-header bg-orange-color">
+                <div class="container text-center text-light">
+                    <h1 class="modal-title fs-5 text-center fw-bold" id="exampleModalLabel">Editar permisos</h1>
+                </div>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <form action="" id="editar_permisos_admin">
+                    <!-- Fila -->
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="form-check form-switch mb-3">
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 1</label>
+                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>                                  
+                                  </div>
+                                  <div class="form-check form-switch mb-3">
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 1</label>
+                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked>                                  
+                                  </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="form-check form-switch mb-3">
+                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked> 
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 2</label>                    
+                                  </div>
+                                  <div class="form-check form-switch mb-3">
+                                    <input class="form-check-input bg-orange-color" type="checkbox" role="switch" id="flexSwitchCheckChecked" checked> 
+                                    <label class="form-check-label" for="flexSwitchCheckChecked">Permiso 2</label>                    
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
             </div>
             <div class="container text-center mb-4 mt-4">
                 <button type="button" class="btn btn-orange-color text-light me-3"
