--- a/system_huellitas/views/admin/scrud_cupones.html
+++ b/system_huellitas/views/admin/scrud_cupones.html
@@ -15,6 +15,8 @@
   <link type="text/css" rel="stylesheet" href="../../resources/css/admin/scrud_marcas.css">
   <!-- Agregamos la libreria de los iconos -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- Agregamos el archivo css para estilizar los switch-->
+  <link type="text/css" rel="stylesheet" href="../../resources/css/admin/switch_styles.css">
 </head>
 
 <body>
