--- a/system_huellitas/views/admin/scrud_pedidos.html
+++ b/system_huellitas/views/admin/scrud_pedidos.html
@@ -171,8 +171,8 @@
 
 
 <!--Modal para el boton de información pedido-->
-<div class="modal " id="InfoPedido" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable">
+<div class="modal" id="InfoPedido" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
         <form>
             <div class="modal-content">
                 <div class="modal-header bg-orange-color">
@@ -184,31 +184,92 @@
                 </div>
                 <div class="modal-body">
                     <div class="row">
+                        <div class="col-sm-12">
+                            <ol class="list-group">
+                                <li
+                                    class="list-group-item d-flex justify-content-between align-items-start shadow mb-4">
+                                    <img src="../../resources/img/png/product1.png" alt="Imagen" height="90">
+                                    <div class="ms-2 me-auto">
+                                        <span class="badge badge-custom text-dark shadow mb-4">1</span>
+                                        <div class="marca"> Pedigree</div>
+                                        <div class="producto"> Bolsa 21 kilos, pedigree perro adulto </div>
+                                    </div>
+                                    <div class="d-flex flex-column mb-3">
+                                        <div class="p-2 text-end">
+                                            <button type="button" class="btn-close btn-close-red"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="p-2">
+                                            <label class="fw-bold">$9.80</label>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li
+                                    class="list-group-item d-flex justify-content-between align-items-start shadow mb-4">
+                                    <img src="../../resources/img/png/product2.png" alt="Imagen" height="90">
+                                    <div class="ms-2 me-auto">
+                                        <span class="badge badge-custom text-dark shadow mb-4">3</span>
+                                        <div class="marca">Maxxi chucho</div>
+                                        <div class="producto">Bolsa Maxxi chucho - perro adulto</div>
+                                    </div>
+                                    <div class="d-flex flex-column mb-3">
+                                        <div class="p-2 text-end">
+                                            <button type="button" class="btn-close btn-close-red"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="p-2">
+                                            <label class="fw-bold">$9.80</label>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li
+                                    class="list-group-item d-flex justify-content-between align-items-start shadow mb-4">
+                                    <img src="../../resources/img/png/product3.png" alt="Imagen" height="90">
+                                    <div class="ms-2 me-auto">
+                                        <span class="badge badge-custom text-dark shadow mb-4">2</span>
+                                        <div class="marca">Purina</div>
+                                        <div class="producto"> Cat show gato adulto pescado 39.6LBS (2 PACK)</div>
+                                    </div>
+                                    <div class="d-flex flex-column mb-3">
+                                        <div class="p-2 text-end">
+                                            <button type="button" class="btn-close btn-close-red"
+                                                aria-label="Close"></button>
+                                        </div>
+                                        <div class="p-2">
+                                            <label class="fw-bold">$9.80</label>
+                                        </div>
+                                    </div>
+                                    <br>
+                                </li>
+                                <br>
+                            </ol>
+                        </div>
                         <div class="col-sm-12 col-md-6">
                             <label class="form-check-label custom-bold-label"
                                 for="flexSwitchCheckChecked">Nombre</label>
-                                <br>
+                            <br>
                             <label class="form-check-label" for="flexSwitchCheckChecked">Daniel Carranza</label>
                         </div>
                         <br>
                         <div class="col-sm-12 col-md-6">
                             <label class="form-check-label custom-bold-label"
                                 for="flexSwitchCheckChecked">Dirección</label>
-                                <br>
-                            <label class="form-check-label" for="flexSwitchCheckChecked">Calle las rosas, residencial 4, poligono 3A, casa #10</label>
+                            <br>
+                            <label class="form-check-label" for="flexSwitchCheckChecked">Calle las rosas, residencial 4,
+                                poligono 3A, casa #10</label>
                         </div>
                         <br>
                         <div class="col-sm-12 col-md-6">
                             <label class="form-check-label custom-bold-label" for="flexSwitchCheckChecked">Fecha que se
                                 realizo el pago</label>
-                                <br>
+                            <br>
                             <label class="form-check-label" for="flexSwitchCheckChecked">2024-03-10</label>
                         </div>
                         <br>
                         <div class="col-sm-12 col-md-6">
                             <label class="form-check-label custom-bold-label" for="flexSwitchCheckChecked">Total a
                                 pagar</label>
-                                <br>
+                            <br>
                             <label class="form-check-label" for="flexSwitchCheckChecked">$29.40</label>
                         </div>
                     </div>
