Pantalla  de productos finalizada

--- a/system_huellitas/views/admin/index_admin.html
+++ b/system_huellitas/views/admin/index_admin.html
@@ -19,12 +19,11 @@
 <body class="bg-yellow-color">
     <div class="container">
         <div class="row justify-content-center align-items-center">
-            <div class="col-5">
+            <div class="col-sm-12 col-md-5 col-lg-5">
                 <img src="../../resources/img/png/huellitas_logo.png" width="600px">
             </div>
-            <div class="col-4">
-                <form action="">
-                    <div class="form" id="login">
+                <div class="col-sm-12 col-md-4 col-lg-4">
+                    <form action="">
                         <div class="row">
                             <div class="col-auto ">
                                 <i class="bi bi-eye-fill" style="font-size: 2rem; color: black;"></i>
@@ -44,11 +43,9 @@
                                 <div class="mb-4">
                                     <label for="password" class="form-label">Contraseña</label>
                                     <input type="password" class="form-control bg-skin-color p-2" id="password">
-                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </form>
+                                </div>
+                    </form>
+            </div>
                 <div class="container text-center mt-4">
                     <!--<button type="button" class="btn btn-orange-color text-light p-2" href="dashboard.html">Ingresar</button>
                     -->
