--- a/system_huellitas/resources/scss/main.scss
+++ b/system_huellitas/resources/scss/main.scss
@@ -54,4 +54,10 @@ $input-disabled-bg: $input-bg;
 $form-switch-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");;
 $form-switch-focus-bg-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 
+// Cambio en el estilo de los select input
+$form-select-bg: #F6F3F3;
+$form-select-border-color: #F6F3F3;
+$form-select-focus-border-color: #afacac;
+$form-select-focus-box-shadow:0 0 0 0.25rem rgba(127, 127, 129, 0.25);
+
 @import "../../node_modules/bootstrap/scss/bootstrap.scss";
