--- a/system_huellitas/views/admin/menu_productos.html
+++ b/system_huellitas/views/admin/menu_productos.html
@@ -30,8 +30,8 @@
     </header>
     <main>
         <div class="container d-flex justify-content-center align-items-center p-4">
-            <div class="row gx-5 gy-5">
-                <div class="col m">
+            <div class="row gx-5 gy-5 text-center">
+                <div class="col">
                     <img class="mb-4" src="../../resources/img/png/dog_products.png" width="300px">
                     <div>
                         <a href="../../views/admin/scrud_productos_perros.html"
