Dashoboard listo con responsive

--- a/system_huellitas/views/admin/dashboard.html
+++ b/system_huellitas/views/admin/dashboard.html
@@ -21,16 +21,16 @@
     <main>
         <div class="container_one p-4 ">
             <div class="shadow p-4 mt-5  mb-3 bg-yellow-color rounded-4">
-                <div class="row">
+                <div class="row d-flex justify-content-center align-items-center gy-2">
                     <div class="col-auto">
                         <img src="../../resources/img/svg/dog.svg" alt="">
                     </div>
-                    <div class="col align-self-center">
+                    <div class="col-sm-12 col-md-10 align-self-center">
                         <div class="row">
-                            <h1 class="fw-bold text-light">¡Buenas tarde María!</h1>
+                            <h1 class="fw-bold text-light">¡Buenas tardes María!</h1>
                         </div>
                         <div class="row">
-                            <div class="col-4">
+                            <div class="col-sm-12 col-md-4">
                                 <form class="d-flex" role="search" id="searchDashboard">
                                     <input class="form-control me-2 bg-white" type="search" aria-label="Search" id="search">
                                     <button class="btn btn-orange-color text-light" type="submit">Buscar</button>
@@ -63,13 +63,13 @@
                     </div>
                 </div>
             </div>
-            <div class="row p-3 mb-2">
-                <div class="col-8">
+            <div class="row p-3 mb-2 gy-4">
+                <div class="col-sm-12 col-md-8 col-lg-8">
                     <div class="shadow p-4 bg-terciary rounded">
                         <canvas id="myChart" width="1000px" height="400px"></canvas>
                     </div>
                 </div>
-                <div class="col-4 container bg-skin-color p-3 rounded-4 ">
+                <div class="col-sm-12 col-md-4 container bg-skin-color p-3 rounded-4">
                     <div class="row ">
                         <div class="row p-4 d-flex justify-content-center align-items-center">
                             <div class="d-flex justify-content-center align-items-center">
@@ -89,15 +89,15 @@
                     </div>
                 </div>
             </div>
-            <div class="row p-3 justify-content-center">
-                <div class="col-auto bg-orange-color shadow p-3 rounded-4">
+            <div class="row p-3 justify-content-center gy-4">
+                <div class="col-md-3 col-lg-3 col-sm-12 bg-orange-color shadow p-3 rounded-4">
                     <div class="d-flex align-items-center p-2">
                         <img src="../../resources/img/svg/people.svg" alt="">
                         <span class="fw-semibold text-light fs-4">Nuevos usuarios</span>
                     </div>
                     <p class="d-flex align-items-center justify-content-center fs-1 fw-bold text-light">5</p>
                 </div>
-                <div class="col-auto bg-orange-color rounded-4 mx-5 shadow p-3 rounded-4">
+                <div class="col-md-3 col-lg-3 col-sm-12 bg-orange-color rounded-4 mx-5 shadow p-3 rounded-4">
                     <div class="d-flex align-items-center p-2">
                         <img src="../../resources/img/svg/orders_white.svg" alt="">
                         <span class="fw-semibold text-light fs-4">Producto más vendido</span>
@@ -108,7 +108,7 @@
                         <p class=" fs-5 fw-semibold text-light">Saco de Pedigree</p>
                     </div>
                     </div>
-                <div class="col-auto bg-orange-color rounded-4 overflow-auto shadow p-3 rounded-4">
+                <div class="col-md-3 col-lg-3 col-sm-12 bg-orange-color rounded-4 overflow-auto shadow p-3 rounded-4">
                     <div class="d-flex align-items-center p-2 grid gap-2">
                         <img src="../../resources/img/svg/edit.svg" alt="">
                         <span class="fw-semibold text-light fs-4">Categorías</span>
